software-center (2.1.17) UNRELEASED; urgency=low

  * softwarecenter/view/softwarepane.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py
    softwarecenter/view/installedpane.py:
    - factor show/hide nonapps functionality up to the
      SoftwarePane base class, cleanup redundant code
    - enable show/hide nonapps in the "Provided by Ubuntu"
      subitem of "Installed Software" per updated spec
      (LP: #556375) 
  * softwarecenter/backend/channel.py:
    - small fix in debug code

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 07 Sep 2010 21:23:40 -0400

software-center (2.1.16.1) maverick; urgency=low

  [ Kiwinote ]
  * softwarecenter/app.py:
    - allow us to 'upgrade' deb files again
  * softwarecenter/view/widgets/pathbar_gtk_atk.py:
    - fix visual corruption on appending pathbar part
      (testcase: channelpane > details > different channelpane > details)
      this time without causing regressions
      (testcase: browse to any app with a screenshot)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Sep 2010 17:02:52 +0200

software-center (2.1.16) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchasedialog.py:
    - make the "Terms of Service" popup display correctly in
      front of the purchase dialog (LP: #625398)
    - tweak the width of the purchase dialog window to
      accomodate the current Ubuntu SSO page width
  * softwarecenter/view/channelpane.py:
    - always default to hiding non-app packages when
      selecting a new channel item in the left navigation
      pane (LP: #630631) 
  * softwarecenter/view/softwarepane.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py
    softwarecenter/view/installedpane.py: 
    - display a spinner while loading an applist view
      (LP: #630641)
  
  [ Michael Vogt ]
  * remove debug output
  * merged lp:~mmcg069/software-center/small-fix (many thanks!)